<resources>
    <string name="app_name">sentiGo</string>

    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_dont_have_account">Dont have account?</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_logout">Log out</string>
    <string name="text_logout_body">Are you sure you want to log out?</string>
    <string name="text_username">Username</string>
    <string name="ed_email_err">Must be a valid email</string>
    <string name="password_6">Passwords cannot be less than 8</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>

    <string name="empty_email">Enter Email</string>
    <string name="empty_password">Enter Password</string>
    <string name="empty_username">Enter Username</string>

    <string name="text_home">Home</string>
    <string name="text_find">Find</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_profile">Profile</string>
    <string name="text_change_photo_button">Update Photo Profile</string>
    <string name="text_update_photo">Upload Photo</string>
    <string name="text_galery">From galery</string>
    <string name="text_name">Name</string>
    <string name="text_city">City</string>
    <string name="text_rating">4.5</string>

    <string name="exemple_email">emailmu@mail.com</string>
    <string name="text_title_rekomendasi">Interesting place for you!</string>
    <string name="text_title_location">Nearby your location</string>
    <string name="text_about">About</string>
    <string name="text_show_map">Show Location</string>
    <string name="text_address">Address</string>

    <string name="delete_favorite">Remove from Favorite</string>
    <string name="add_favorite">Add to Favorite</string>
    <string name="text_favorite_place">Your Favorite Place!</string>
    <string name="empty_data">Empty Data</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="text_story">Tell me about your desires!</string>
    <string name="text_result">Result</string>
    <string name="text_change_password">Update Password</string>
    <string name="text_change_language">Change Language</string>
    <string name="text_change_your_password">Update Your Password</string>
    <string name="text_change_your_photo">Update Your Photo Profile</string>
    <string name="text_old_password">Old Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_change_password_same">The old password and the new password are the same!</string>
    <string name="text_sentigo">sentiGo</string>
    <string name="text_slogan">Start your journey with us.</string>
    <string name="text_personal_data">Complete your personal data below.</string>
    <string name="text_register">Register</string>
    <string name="text_explore_more">Explore More</string>
    <string name="text_from_you_need">Based on your desires!</string>
    <string name="text_desc_empty">Description cannot be empty</string>
    <string name="title_activity_find_list">FindListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>