<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.sheet.PhotoProfileFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/text_change_your_photo"
                android:textSize="18sp"
                android:layout_gravity="center|top"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:src="@drawable/baseline_image_24"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_galery"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/text_galery"
                android:layout_margin="32dp"
                android:layout_gravity="center"
                android:visibility="visible"
                android:textColor="@color/white"
                android:backgroundTint="?attr/colorPrimary"/>

            <Button
                android:id="@+id/btn_update_photo"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/text_update_photo"
                android:visibility="gone"
                android:layout_margin="32dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:backgroundTint="?attr/colorPrimary"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            tools:visibility="visible" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>